// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser doctype 1`] = `
Object {
  "isFragment": false,
  "nodeList": Array [
    Object {
      "endCol": 103,
      "endLine": 1,
      "endOffset": 102,
      "isFragment": false,
      "isGhost": false,
      "name": "html",
      "nodeName": "#doctype",
      "publicId": "-//W3C//DTD HTML 4.01 Transitional//EN",
      "raw": "<!DOCTYPE html public \\"-//W3C//DTD HTML 4.01 Transitional//EN\\" \\"http://www.w3.org/TR/html4/loose.dtd\\">",
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "systemId": "http://www.w3.org/TR/html4/loose.dtd",
      "type": "doctype",
    },
  ],
}
`;

exports[`parser doctype 2`] = `
Object {
  "isFragment": false,
  "nodeList": Array [
    Object {
      "endCol": 64,
      "endLine": 1,
      "endOffset": 63,
      "isFragment": false,
      "isGhost": false,
      "name": "html",
      "nodeName": "#doctype",
      "publicId": "-//W3C//DTD HTML 4.01 Transitional//EN",
      "raw": "<!DOCTYPE html public \\"-//W3C//DTD HTML 4.01 Transitional//EN\\">",
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "systemId": "",
      "type": "doctype",
    },
  ],
}
`;

exports[`parser doctype 3`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`parser doctype 4`] = `
Object {
  "isFragment": false,
  "nodeList": Array [
    Object {
      "attributes": Array [],
      "endCol": 7,
      "endLine": 1,
      "endOffset": 6,
      "endSpace": Object {
        "endCol": 6,
        "endLine": 1,
        "endOffset": 5,
        "raw": "",
        "startCol": 6,
        "startLine": 1,
        "startOffset": 5,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "html",
      "raw": "<html>",
      "selfClosingSolidus": Object {
        "endCol": 6,
        "endLine": 1,
        "endOffset": 5,
        "raw": "",
        "startCol": 6,
        "startLine": 1,
        "startOffset": 5,
      },
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "attributes": Array [],
      "endCol": 14,
      "endLine": 1,
      "endOffset": 13,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "html",
      "raw": "</html>",
      "startCol": 7,
      "startLine": 1,
      "startOffset": 6,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
  ],
}
`;

exports[`parser html parser difference 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`parser invalid tag 1`] = `
Object {
  "isFragment": true,
  "nodeList": Array [
    Object {
      "attributes": Array [
        Object {
          "endCol": 20,
          "endLine": 1,
          "endOffset": 20,
          "endQuote": Object {
            "endCol": 20,
            "endLine": 1,
            "endOffset": 20,
            "raw": "\\"",
            "startCol": 19,
            "startLine": 1,
            "startOffset": 19,
          },
          "equal": Object {
            "endCol": 11,
            "endLine": 1,
            "endOffset": 11,
            "raw": "=",
            "startCol": 10,
            "startLine": 1,
            "startOffset": 10,
          },
          "isDuplicatable": false,
          "isDynamicValue": true,
          "name": Object {
            "endCol": 10,
            "endLine": 1,
            "endOffset": 10,
            "raw": "[*ngIf]",
            "startCol": 3,
            "startLine": 1,
            "startOffset": 3,
          },
          "potentialName": "ngIf",
          "raw": "[*ngIf]=\\"1 === 1\\"",
          "spacesAfterEqual": Object {
            "endCol": 11,
            "endLine": 1,
            "endOffset": 11,
            "raw": "",
            "startCol": 11,
            "startLine": 1,
            "startOffset": 11,
          },
          "spacesBeforeEqual": Object {
            "endCol": 10,
            "endLine": 1,
            "endOffset": 10,
            "raw": "",
            "startCol": 10,
            "startLine": 1,
            "startOffset": 10,
          },
          "spacesBeforeName": Object {
            "endCol": 3,
            "endLine": 1,
            "endOffset": 3,
            "raw": "",
            "startCol": 3,
            "startLine": 1,
            "startOffset": 3,
          },
          "startCol": 3,
          "startLine": 1,
          "startOffset": 3,
          "startQuote": Object {
            "endCol": 12,
            "endLine": 1,
            "endOffset": 12,
            "raw": "\\"",
            "startCol": 11,
            "startLine": 1,
            "startOffset": 11,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 19,
            "endLine": 1,
            "endOffset": 19,
            "raw": "1 === 1",
            "startCol": 12,
            "startLine": 1,
            "startOffset": 12,
          },
        },
        Object {
          "endCol": 38,
          "endLine": 1,
          "endOffset": 38,
          "endQuote": Object {
            "endCol": 38,
            "endLine": 1,
            "endOffset": 38,
            "raw": "\\"",
            "startCol": 37,
            "startLine": 1,
            "startOffset": 37,
          },
          "equal": Object {
            "endCol": 29,
            "endLine": 1,
            "endOffset": 29,
            "raw": "=",
            "startCol": 28,
            "startLine": 1,
            "startOffset": 28,
          },
          "isDuplicatable": false,
          "name": Object {
            "endCol": 28,
            "endLine": 1,
            "endOffset": 28,
            "raw": "ng-*-if",
            "startCol": 21,
            "startLine": 1,
            "startOffset": 21,
          },
          "potentialName": "ng--if",
          "raw": "ng-*-if=\\"2 === 2\\"",
          "spacesAfterEqual": Object {
            "endCol": 29,
            "endLine": 1,
            "endOffset": 29,
            "raw": "",
            "startCol": 29,
            "startLine": 1,
            "startOffset": 29,
          },
          "spacesBeforeEqual": Object {
            "endCol": 28,
            "endLine": 1,
            "endOffset": 28,
            "raw": "",
            "startCol": 28,
            "startLine": 1,
            "startOffset": 28,
          },
          "spacesBeforeName": Object {
            "endCol": 21,
            "endLine": 1,
            "endOffset": 21,
            "raw": "",
            "startCol": 21,
            "startLine": 1,
            "startOffset": 21,
          },
          "startCol": 21,
          "startLine": 1,
          "startOffset": 21,
          "startQuote": Object {
            "endCol": 30,
            "endLine": 1,
            "endOffset": 30,
            "raw": "\\"",
            "startCol": 29,
            "startLine": 1,
            "startOffset": 29,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 37,
            "endLine": 1,
            "endOffset": 37,
            "raw": "2 === 2",
            "startCol": 30,
            "startLine": 1,
            "startOffset": 30,
          },
        },
        Object {
          "endCol": 48,
          "endLine": 1,
          "endOffset": 48,
          "endQuote": Object {
            "endCol": 48,
            "endLine": 1,
            "endOffset": 48,
            "raw": "\\"",
            "startCol": 47,
            "startLine": 1,
            "startOffset": 47,
          },
          "equal": Object {
            "endCol": 44,
            "endLine": 1,
            "endOffset": 44,
            "raw": "=",
            "startCol": 43,
            "startLine": 1,
            "startOffset": 43,
          },
          "isDuplicatable": false,
          "name": Object {
            "endCol": 43,
            "endLine": 1,
            "endOffset": 43,
            "raw": "href",
            "startCol": 39,
            "startLine": 1,
            "startOffset": 39,
          },
          "potentialName": "href",
          "raw": "href=\\"{{\\"",
          "spacesAfterEqual": Object {
            "endCol": 44,
            "endLine": 1,
            "endOffset": 44,
            "raw": "",
            "startCol": 44,
            "startLine": 1,
            "startOffset": 44,
          },
          "spacesBeforeEqual": Object {
            "endCol": 43,
            "endLine": 1,
            "endOffset": 43,
            "raw": "",
            "startCol": 43,
            "startLine": 1,
            "startOffset": 43,
          },
          "spacesBeforeName": Object {
            "endCol": 39,
            "endLine": 1,
            "endOffset": 39,
            "raw": "",
            "startCol": 39,
            "startLine": 1,
            "startOffset": 39,
          },
          "startCol": 39,
          "startLine": 1,
          "startOffset": 39,
          "startQuote": Object {
            "endCol": 45,
            "endLine": 1,
            "endOffset": 45,
            "raw": "\\"",
            "startCol": 44,
            "startLine": 1,
            "startOffset": 44,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 47,
            "endLine": 1,
            "endOffset": 47,
            "raw": "{{",
            "startCol": 45,
            "startLine": 1,
            "startOffset": 45,
          },
        },
        Object {
          "endCol": 79,
          "endLine": 1,
          "endOffset": 79,
          "endQuote": Object {
            "endCol": 79,
            "endLine": 1,
            "endOffset": 79,
            "raw": "\\"",
            "startCol": 78,
            "startLine": 1,
            "startOffset": 78,
          },
          "equal": Object {
            "endCol": 58,
            "endLine": 1,
            "endOffset": 58,
            "raw": "=",
            "startCol": 57,
            "startLine": 1,
            "startOffset": 57,
          },
          "isDuplicatable": false,
          "name": Object {
            "endCol": 57,
            "endLine": 1,
            "endOffset": 57,
            "raw": "download",
            "startCol": 49,
            "startLine": 1,
            "startOffset": 49,
          },
          "potentialName": "download",
          "raw": "download=\\"{ { downloadUrl } }\\"",
          "spacesAfterEqual": Object {
            "endCol": 58,
            "endLine": 1,
            "endOffset": 58,
            "raw": "",
            "startCol": 58,
            "startLine": 1,
            "startOffset": 58,
          },
          "spacesBeforeEqual": Object {
            "endCol": 57,
            "endLine": 1,
            "endOffset": 57,
            "raw": "",
            "startCol": 57,
            "startLine": 1,
            "startOffset": 57,
          },
          "spacesBeforeName": Object {
            "endCol": 49,
            "endLine": 1,
            "endOffset": 49,
            "raw": "",
            "startCol": 49,
            "startLine": 1,
            "startOffset": 49,
          },
          "startCol": 49,
          "startLine": 1,
          "startOffset": 49,
          "startQuote": Object {
            "endCol": 59,
            "endLine": 1,
            "endOffset": 59,
            "raw": "\\"",
            "startCol": 58,
            "startLine": 1,
            "startOffset": 58,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 78,
            "endLine": 1,
            "endOffset": 78,
            "raw": "{ { downloadUrl } }",
            "startCol": 59,
            "startLine": 1,
            "startOffset": 59,
          },
        },
      ],
      "endCol": 83,
      "endLine": 1,
      "endOffset": 82,
      "endSpace": Object {
        "endCol": 82,
        "endLine": 1,
        "endOffset": 81,
        "raw": "",
        "startCol": 82,
        "startLine": 1,
        "startOffset": 81,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "a",
      "raw": "<a [*ngIf]=\\"1 === 1\\" ng-*-if=\\"2 === 2\\" href=\\"{{\\" download=\\"{ { downloadUrl } }\\" />",
      "selfClosingSolidus": Object {
        "endCol": 82,
        "endLine": 1,
        "endOffset": 81,
        "raw": " /",
        "startCol": 80,
        "startLine": 1,
        "startOffset": 79,
      },
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "tagCloseChar": "/>",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 86,
      "endLine": 1,
      "endOffset": 85,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "</>",
      "startCol": 83,
      "startLine": 1,
      "startOffset": 82,
      "type": "text",
    },
  ],
  "unkownParseError": "Only void and foreign elements can be self closed \\"a\\" (\\"[ERROR ->]<a [*ngIf]=\\"1 === 1\\" ng-*-if=\\"2 === 2\\" href=\\"{{\\" download=\\"{ { downloadUrl } }\\" /></>\\"): angular-html-parser@0:0
Unexpected closing tag \\"\\". It may happen when the tag has already been closed by another tag. For more info see https://www.w3.org/TR/html5/syntax.html#closing-elements-that-have-implied-end-tags (\\"<a [*ngIf]=\\"1 === 1\\" ng-*-if=\\"2 === 2\\" href=\\"{{\\" download=\\"{ { downloadUrl } }\\" />[ERROR ->]</>\\"): angular-html-parser@0:82",
}
`;

exports[`parser parse 1`] = `
Object {
  "isFragment": false,
  "nodeList": Array [
    Object {
      "endCol": 9,
      "endLine": 2,
      "endOffset": 9,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
        ",
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "type": "text",
    },
    Object {
      "endCol": 24,
      "endLine": 2,
      "endOffset": 24,
      "isFragment": false,
      "isGhost": false,
      "name": "html",
      "nodeName": "#doctype",
      "publicId": "",
      "raw": "<!DOCTYPE html>",
      "startCol": 9,
      "startLine": 2,
      "startOffset": 9,
      "systemId": "",
      "type": "doctype",
    },
    Object {
      "endCol": 9,
      "endLine": 3,
      "endOffset": 33,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
        ",
      "startCol": 24,
      "startLine": 2,
      "startOffset": 24,
      "type": "text",
    },
    Object {
      "endCol": 72,
      "endLine": 7,
      "endOffset": 412,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#comment",
      "raw": "<![CDATA[ Within this Character Data block I can use double dashes as
        much as I want (along with <, &, ', and \\") *and* %MyParamEntity; will be
        expanded to the text \\"Has been expanded\\" ... however, I can't use the
        CEND sequence. If I need to use CEND I must escape one of the brackets
        or the greater-than sign using concatenated CDATA sections. ]]>",
      "startCol": 9,
      "startLine": 3,
      "startOffset": 33,
      "type": "comment",
    },
    Object {
      "endCol": 9,
      "endLine": 8,
      "endOffset": 421,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
        ",
      "startCol": 72,
      "startLine": 7,
      "startOffset": 412,
      "type": "text",
    },
    Object {
      "endCol": 35,
      "endLine": 8,
      "endOffset": 447,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#comment",
      "raw": "<!-- top level comment -->",
      "startCol": 9,
      "startLine": 8,
      "startOffset": 421,
      "type": "comment",
    },
    Object {
      "endCol": 9,
      "endLine": 9,
      "endOffset": 456,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
        ",
      "startCol": 35,
      "startLine": 8,
      "startOffset": 447,
      "type": "text",
    },
    Object {
      "attributes": Array [
        Object {
          "endCol": 23,
          "endLine": 9,
          "endOffset": 471,
          "endQuote": Object {
            "endCol": 23,
            "endLine": 9,
            "endOffset": 471,
            "raw": "\\"",
            "startCol": 22,
            "startLine": 9,
            "startOffset": 470,
          },
          "equal": Object {
            "endCol": 19,
            "endLine": 9,
            "endOffset": 467,
            "raw": "=",
            "startCol": 18,
            "startLine": 9,
            "startOffset": 466,
          },
          "isDuplicatable": false,
          "name": Object {
            "endCol": 18,
            "endLine": 9,
            "endOffset": 466,
            "raw": "lang",
            "startCol": 14,
            "startLine": 9,
            "startOffset": 462,
          },
          "potentialName": "lang",
          "raw": "lang=\\"en\\"",
          "spacesAfterEqual": Object {
            "endCol": 19,
            "endLine": 9,
            "endOffset": 467,
            "raw": "",
            "startCol": 19,
            "startLine": 9,
            "startOffset": 467,
          },
          "spacesBeforeEqual": Object {
            "endCol": 18,
            "endLine": 9,
            "endOffset": 466,
            "raw": "",
            "startCol": 18,
            "startLine": 9,
            "startOffset": 466,
          },
          "spacesBeforeName": Object {
            "endCol": 14,
            "endLine": 9,
            "endOffset": 462,
            "raw": "",
            "startCol": 14,
            "startLine": 9,
            "startOffset": 462,
          },
          "startCol": 14,
          "startLine": 9,
          "startOffset": 462,
          "startQuote": Object {
            "endCol": 20,
            "endLine": 9,
            "endOffset": 468,
            "raw": "\\"",
            "startCol": 19,
            "startLine": 9,
            "startOffset": 467,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 22,
            "endLine": 9,
            "endOffset": 470,
            "raw": "en",
            "startCol": 20,
            "startLine": 9,
            "startOffset": 468,
          },
        },
      ],
      "endCol": 25,
      "endLine": 9,
      "endOffset": 472,
      "endSpace": Object {
        "endCol": 24,
        "endLine": 9,
        "endOffset": 471,
        "raw": "",
        "startCol": 24,
        "startLine": 9,
        "startOffset": 471,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "html",
      "raw": "<html lang=\\"en\\">",
      "selfClosingSolidus": Object {
        "endCol": 24,
        "endLine": 9,
        "endOffset": 471,
        "raw": "",
        "startCol": 24,
        "startLine": 9,
        "startOffset": 471,
      },
      "startCol": 9,
      "startLine": 9,
      "startOffset": 456,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 11,
      "endLine": 10,
      "endOffset": 483,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
          ",
      "startCol": 25,
      "startLine": 9,
      "startOffset": 472,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 17,
      "endLine": 10,
      "endOffset": 489,
      "endSpace": Object {
        "endCol": 16,
        "endLine": 10,
        "endOffset": 488,
        "raw": "",
        "startCol": 16,
        "startLine": 10,
        "startOffset": 488,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "body",
      "raw": "<body>",
      "selfClosingSolidus": Object {
        "endCol": 16,
        "endLine": 10,
        "endOffset": 488,
        "raw": "",
        "startCol": 16,
        "startLine": 10,
        "startOffset": 488,
      },
      "startCol": 11,
      "startLine": 10,
      "startOffset": 483,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 13,
      "endLine": 11,
      "endOffset": 502,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 17,
      "startLine": 10,
      "startOffset": 489,
      "type": "text",
    },
    Object {
      "endCol": 34,
      "endLine": 11,
      "endOffset": 523,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#comment",
      "raw": "<!-- body comment -->",
      "startCol": 13,
      "startLine": 11,
      "startOffset": 502,
      "type": "comment",
    },
    Object {
      "endCol": 13,
      "endLine": 12,
      "endOffset": 536,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 34,
      "startLine": 11,
      "startOffset": 523,
      "type": "text",
    },
    Object {
      "attributes": Array [
        Object {
          "endCol": 34,
          "endLine": 12,
          "endOffset": 558,
          "endQuote": Object {
            "endCol": 34,
            "endLine": 12,
            "endOffset": 558,
            "raw": "\\"",
            "startCol": 33,
            "startLine": 12,
            "startOffset": 557,
          },
          "equal": Object {
            "endCol": 26,
            "endLine": 12,
            "endOffset": 550,
            "raw": "=",
            "startCol": 25,
            "startLine": 12,
            "startOffset": 549,
          },
          "isDuplicatable": false,
          "isDynamicValue": true,
          "name": Object {
            "endCol": 25,
            "endLine": 12,
            "endOffset": 549,
            "raw": "[type]",
            "startCol": 19,
            "startLine": 12,
            "startOffset": 543,
          },
          "potentialName": "type",
          "raw": "[type]=\\"'text'\\"",
          "spacesAfterEqual": Object {
            "endCol": 26,
            "endLine": 12,
            "endOffset": 550,
            "raw": "",
            "startCol": 26,
            "startLine": 12,
            "startOffset": 550,
          },
          "spacesBeforeEqual": Object {
            "endCol": 25,
            "endLine": 12,
            "endOffset": 549,
            "raw": "",
            "startCol": 25,
            "startLine": 12,
            "startOffset": 549,
          },
          "spacesBeforeName": Object {
            "endCol": 19,
            "endLine": 12,
            "endOffset": 543,
            "raw": "",
            "startCol": 19,
            "startLine": 12,
            "startOffset": 543,
          },
          "startCol": 19,
          "startLine": 12,
          "startOffset": 543,
          "startQuote": Object {
            "endCol": 27,
            "endLine": 12,
            "endOffset": 551,
            "raw": "\\"",
            "startCol": 26,
            "startLine": 12,
            "startOffset": 550,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 33,
            "endLine": 12,
            "endOffset": 557,
            "raw": "'text'",
            "startCol": 27,
            "startLine": 12,
            "startOffset": 551,
          },
        },
      ],
      "endCol": 38,
      "endLine": 12,
      "endOffset": 561,
      "endSpace": Object {
        "endCol": 37,
        "endLine": 12,
        "endOffset": 560,
        "raw": "",
        "startCol": 37,
        "startLine": 12,
        "startOffset": 560,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "input",
      "raw": "<input [type]=\\"'text'\\" />",
      "selfClosingSolidus": Object {
        "endCol": 37,
        "endLine": 12,
        "endOffset": 560,
        "raw": " /",
        "startCol": 35,
        "startLine": 12,
        "startOffset": 558,
      },
      "startCol": 13,
      "startLine": 12,
      "startOffset": 536,
      "tagCloseChar": "/>",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 13,
      "endLine": 13,
      "endOffset": 574,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 38,
      "startLine": 12,
      "startOffset": 561,
      "type": "text",
    },
    Object {
      "attributes": Array [
        Object {
          "endCol": 26,
          "endLine": 14,
          "endOffset": 607,
          "endQuote": Object {
            "endCol": 26,
            "endLine": 14,
            "endOffset": 607,
            "raw": "\\"",
            "startCol": 25,
            "startLine": 14,
            "startOffset": 606,
          },
          "equal": Object {
            "endCol": 19,
            "endLine": 14,
            "endOffset": 600,
            "raw": "=",
            "startCol": 18,
            "startLine": 14,
            "startOffset": 599,
          },
          "isDuplicatable": false,
          "name": Object {
            "endCol": 18,
            "endLine": 14,
            "endOffset": 599,
            "raw": "type",
            "startCol": 14,
            "startLine": 14,
            "startOffset": 595,
          },
          "potentialName": "type",
          "raw": "type=\\"radio\\"",
          "spacesAfterEqual": Object {
            "endCol": 19,
            "endLine": 14,
            "endOffset": 600,
            "raw": "",
            "startCol": 19,
            "startLine": 14,
            "startOffset": 600,
          },
          "spacesBeforeEqual": Object {
            "endCol": 18,
            "endLine": 14,
            "endOffset": 599,
            "raw": "",
            "startCol": 18,
            "startLine": 14,
            "startOffset": 599,
          },
          "spacesBeforeName": Object {
            "endCol": 14,
            "endLine": 14,
            "endOffset": 595,
            "raw": "",
            "startCol": 14,
            "startLine": 14,
            "startOffset": 595,
          },
          "startCol": 14,
          "startLine": 14,
          "startOffset": 595,
          "startQuote": Object {
            "endCol": 20,
            "endLine": 14,
            "endOffset": 601,
            "raw": "\\"",
            "startCol": 19,
            "startLine": 14,
            "startOffset": 600,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 25,
            "endLine": 14,
            "endOffset": 606,
            "raw": "radio",
            "startCol": 20,
            "startLine": 14,
            "startOffset": 601,
          },
        },
        Object {
          "endCol": 30,
          "endLine": 15,
          "endOffset": 638,
          "endQuote": Object {
            "endCol": 30,
            "endLine": 15,
            "endOffset": 638,
            "raw": "\\"",
            "startCol": 29,
            "startLine": 15,
            "startOffset": 637,
          },
          "equal": Object {
            "endCol": 24,
            "endLine": 15,
            "endOffset": 632,
            "raw": "=",
            "startCol": 23,
            "startLine": 15,
            "startOffset": 631,
          },
          "isDuplicatable": false,
          "isDynamicValue": true,
          "name": Object {
            "endCol": 23,
            "endLine": 15,
            "endOffset": 631,
            "raw": "[checked]",
            "startCol": 14,
            "startLine": 15,
            "startOffset": 622,
          },
          "potentialName": "checked",
          "raw": "[checked]=\\"true\\"",
          "spacesAfterEqual": Object {
            "endCol": 24,
            "endLine": 15,
            "endOffset": 632,
            "raw": "",
            "startCol": 24,
            "startLine": 15,
            "startOffset": 632,
          },
          "spacesBeforeEqual": Object {
            "endCol": 23,
            "endLine": 15,
            "endOffset": 631,
            "raw": "",
            "startCol": 23,
            "startLine": 15,
            "startOffset": 631,
          },
          "spacesBeforeName": Object {
            "endCol": 14,
            "endLine": 15,
            "endOffset": 622,
            "raw": "",
            "startCol": 14,
            "startLine": 15,
            "startOffset": 622,
          },
          "startCol": 14,
          "startLine": 15,
          "startOffset": 622,
          "startQuote": Object {
            "endCol": 25,
            "endLine": 15,
            "endOffset": 633,
            "raw": "\\"",
            "startCol": 24,
            "startLine": 15,
            "startOffset": 632,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 29,
            "endLine": 15,
            "endOffset": 637,
            "raw": "true",
            "startCol": 25,
            "startLine": 15,
            "startOffset": 633,
          },
        },
      ],
      "endCol": 15,
      "endLine": 16,
      "endOffset": 653,
      "endSpace": Object {
        "endCol": 14,
        "endLine": 16,
        "endOffset": 652,
        "raw": "",
        "startCol": 14,
        "startLine": 16,
        "startOffset": 652,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "input",
      "raw": "<input
              type=\\"radio\\"
              [checked]=\\"true\\"
            />",
      "selfClosingSolidus": Object {
        "endCol": 14,
        "endLine": 16,
        "endOffset": 652,
        "raw": "
            /",
        "startCol": 31,
        "startLine": 15,
        "startOffset": 638,
      },
      "startCol": 13,
      "startLine": 13,
      "startOffset": 574,
      "tagCloseChar": "/>",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 13,
      "endLine": 17,
      "endOffset": 666,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 15,
      "startLine": 16,
      "startOffset": 653,
      "type": "text",
    },
    Object {
      "attributes": Array [
        Object {
          "endCol": 27,
          "endLine": 18,
          "endOffset": 700,
          "endQuote": Object {
            "endCol": 27,
            "endLine": 18,
            "endOffset": 700,
            "raw": "\\"",
            "startCol": 26,
            "startLine": 18,
            "startOffset": 699,
          },
          "equal": Object {
            "endCol": 19,
            "endLine": 18,
            "endOffset": 692,
            "raw": "=",
            "startCol": 18,
            "startLine": 18,
            "startOffset": 691,
          },
          "isDuplicatable": false,
          "name": Object {
            "endCol": 18,
            "endLine": 18,
            "endOffset": 691,
            "raw": "type",
            "startCol": 14,
            "startLine": 18,
            "startOffset": 687,
          },
          "potentialName": "type",
          "raw": "type=\\"number\\"",
          "spacesAfterEqual": Object {
            "endCol": 19,
            "endLine": 18,
            "endOffset": 692,
            "raw": "",
            "startCol": 19,
            "startLine": 18,
            "startOffset": 692,
          },
          "spacesBeforeEqual": Object {
            "endCol": 18,
            "endLine": 18,
            "endOffset": 691,
            "raw": "",
            "startCol": 18,
            "startLine": 18,
            "startOffset": 691,
          },
          "spacesBeforeName": Object {
            "endCol": 14,
            "endLine": 18,
            "endOffset": 687,
            "raw": "",
            "startCol": 14,
            "startLine": 18,
            "startOffset": 687,
          },
          "startCol": 14,
          "startLine": 18,
          "startOffset": 687,
          "startQuote": Object {
            "endCol": 20,
            "endLine": 18,
            "endOffset": 693,
            "raw": "\\"",
            "startCol": 19,
            "startLine": 18,
            "startOffset": 692,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 26,
            "endLine": 18,
            "endOffset": 699,
            "raw": "number",
            "startCol": 20,
            "startLine": 18,
            "startOffset": 693,
          },
        },
        Object {
          "endCol": 27,
          "endLine": 19,
          "endOffset": 728,
          "endQuote": Object {
            "endCol": 27,
            "endLine": 19,
            "endOffset": 728,
            "raw": "\\"",
            "startCol": 26,
            "startLine": 19,
            "startOffset": 727,
          },
          "equal": Object {
            "endCol": 22,
            "endLine": 19,
            "endOffset": 723,
            "raw": "=",
            "startCol": 21,
            "startLine": 19,
            "startOffset": 722,
          },
          "isDuplicatable": false,
          "isDynamicValue": true,
          "name": Object {
            "endCol": 21,
            "endLine": 19,
            "endOffset": 722,
            "raw": "[value]",
            "startCol": 14,
            "startLine": 19,
            "startOffset": 715,
          },
          "potentialName": "value",
          "raw": "[value]=\\"123\\"",
          "spacesAfterEqual": Object {
            "endCol": 22,
            "endLine": 19,
            "endOffset": 723,
            "raw": "",
            "startCol": 22,
            "startLine": 19,
            "startOffset": 723,
          },
          "spacesBeforeEqual": Object {
            "endCol": 21,
            "endLine": 19,
            "endOffset": 722,
            "raw": "",
            "startCol": 21,
            "startLine": 19,
            "startOffset": 722,
          },
          "spacesBeforeName": Object {
            "endCol": 14,
            "endLine": 19,
            "endOffset": 715,
            "raw": "",
            "startCol": 14,
            "startLine": 19,
            "startOffset": 715,
          },
          "startCol": 14,
          "startLine": 19,
          "startOffset": 715,
          "startQuote": Object {
            "endCol": 23,
            "endLine": 19,
            "endOffset": 724,
            "raw": "\\"",
            "startCol": 22,
            "startLine": 19,
            "startOffset": 723,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 26,
            "endLine": 19,
            "endOffset": 727,
            "raw": "123",
            "startCol": 23,
            "startLine": 19,
            "startOffset": 724,
          },
        },
      ],
      "endCol": 15,
      "endLine": 20,
      "endOffset": 743,
      "endSpace": Object {
        "endCol": 14,
        "endLine": 20,
        "endOffset": 742,
        "raw": "",
        "startCol": 14,
        "startLine": 20,
        "startOffset": 742,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "input",
      "raw": "<input
              type=\\"number\\"
              [value]=\\"123\\"
            />",
      "selfClosingSolidus": Object {
        "endCol": 14,
        "endLine": 20,
        "endOffset": 742,
        "raw": "
            /",
        "startCol": 28,
        "startLine": 19,
        "startOffset": 728,
      },
      "startCol": 13,
      "startLine": 17,
      "startOffset": 666,
      "tagCloseChar": "/>",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 13,
      "endLine": 21,
      "endOffset": 756,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 15,
      "startLine": 20,
      "startOffset": 743,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 21,
      "endLine": 21,
      "endOffset": 764,
      "endSpace": Object {
        "endCol": 20,
        "endLine": 21,
        "endOffset": 763,
        "raw": "",
        "startCol": 20,
        "startLine": 21,
        "startOffset": 763,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "select",
      "raw": "<select>",
      "selfClosingSolidus": Object {
        "endCol": 20,
        "endLine": 21,
        "endOffset": 763,
        "raw": "",
        "startCol": 20,
        "startLine": 21,
        "startOffset": 763,
      },
      "startCol": 13,
      "startLine": 21,
      "startOffset": 756,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 15,
      "endLine": 22,
      "endOffset": 779,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
              ",
      "startCol": 21,
      "startLine": 21,
      "startOffset": 764,
      "type": "text",
    },
    Object {
      "attributes": Array [
        Object {
          "endCol": 43,
          "endLine": 22,
          "endOffset": 808,
          "endQuote": Object {
            "endCol": 43,
            "endLine": 22,
            "endOffset": 808,
            "raw": "\\"",
            "startCol": 42,
            "startLine": 22,
            "startOffset": 807,
          },
          "equal": Object {
            "endCol": 31,
            "endLine": 22,
            "endOffset": 796,
            "raw": "=",
            "startCol": 30,
            "startLine": 22,
            "startOffset": 795,
          },
          "isDuplicatable": false,
          "isDynamicValue": true,
          "name": Object {
            "endCol": 30,
            "endLine": 22,
            "endOffset": 795,
            "raw": "selected",
            "startCol": 22,
            "startLine": 22,
            "startOffset": 787,
          },
          "potentialName": "selected",
          "raw": "selected=\\"{{ true }}\\"",
          "spacesAfterEqual": Object {
            "endCol": 31,
            "endLine": 22,
            "endOffset": 796,
            "raw": "",
            "startCol": 31,
            "startLine": 22,
            "startOffset": 796,
          },
          "spacesBeforeEqual": Object {
            "endCol": 30,
            "endLine": 22,
            "endOffset": 795,
            "raw": "",
            "startCol": 30,
            "startLine": 22,
            "startOffset": 795,
          },
          "spacesBeforeName": Object {
            "endCol": 22,
            "endLine": 22,
            "endOffset": 787,
            "raw": "",
            "startCol": 22,
            "startLine": 22,
            "startOffset": 787,
          },
          "startCol": 22,
          "startLine": 22,
          "startOffset": 787,
          "startQuote": Object {
            "endCol": 32,
            "endLine": 22,
            "endOffset": 797,
            "raw": "\\"",
            "startCol": 31,
            "startLine": 22,
            "startOffset": 796,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 42,
            "endLine": 22,
            "endOffset": 807,
            "raw": "{{ true }}",
            "startCol": 32,
            "startLine": 22,
            "startOffset": 797,
          },
        },
      ],
      "endCol": 45,
      "endLine": 22,
      "endOffset": 809,
      "endSpace": Object {
        "endCol": 44,
        "endLine": 22,
        "endOffset": 808,
        "raw": "",
        "startCol": 44,
        "startLine": 22,
        "startOffset": 808,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "option",
      "raw": "<option selected=\\"{{ true }}\\">",
      "selfClosingSolidus": Object {
        "endCol": 44,
        "endLine": 22,
        "endOffset": 808,
        "raw": "",
        "startCol": 44,
        "startLine": 22,
        "startOffset": 808,
      },
      "startCol": 15,
      "startLine": 22,
      "startOffset": 779,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "attributes": Array [],
      "endCol": 54,
      "endLine": 22,
      "endOffset": 818,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "option",
      "raw": "</option>",
      "startCol": 45,
      "startLine": 22,
      "startOffset": 809,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    Object {
      "endCol": 13,
      "endLine": 23,
      "endOffset": 831,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 54,
      "startLine": 22,
      "startOffset": 818,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 22,
      "endLine": 23,
      "endOffset": 840,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "select",
      "raw": "</select>",
      "startCol": 13,
      "startLine": 23,
      "startOffset": 831,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    Object {
      "endCol": 13,
      "endLine": 24,
      "endOffset": 853,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 22,
      "startLine": 23,
      "startOffset": 840,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 18,
      "endLine": 24,
      "endOffset": 858,
      "endSpace": Object {
        "endCol": 17,
        "endLine": 24,
        "endOffset": 857,
        "raw": "",
        "startCol": 17,
        "startLine": 24,
        "startOffset": 857,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "div",
      "raw": "<div>",
      "selfClosingSolidus": Object {
        "endCol": 17,
        "endLine": 24,
        "endOffset": 857,
        "raw": "",
        "startCol": 17,
        "startLine": 24,
        "startOffset": 857,
      },
      "startCol": 13,
      "startLine": 24,
      "startOffset": 853,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 15,
      "endLine": 26,
      "endOffset": 893,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
              Text1
              ",
      "startCol": 18,
      "startLine": 24,
      "startOffset": 858,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 21,
      "endLine": 26,
      "endOffset": 899,
      "endSpace": Object {
        "endCol": 20,
        "endLine": 26,
        "endOffset": 898,
        "raw": "",
        "startCol": 20,
        "startLine": 26,
        "startOffset": 898,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "span",
      "raw": "<span>",
      "selfClosingSolidus": Object {
        "endCol": 20,
        "endLine": 26,
        "endOffset": 898,
        "raw": "",
        "startCol": 20,
        "startLine": 26,
        "startOffset": 898,
      },
      "startCol": 15,
      "startLine": 26,
      "startOffset": 893,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 25,
      "endLine": 26,
      "endOffset": 903,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "Text",
      "startCol": 21,
      "startLine": 26,
      "startOffset": 899,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 32,
      "endLine": 26,
      "endOffset": 910,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "span",
      "raw": "</span>",
      "startCol": 25,
      "startLine": 26,
      "startOffset": 903,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    Object {
      "endCol": 13,
      "endLine": 28,
      "endOffset": 943,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
              Text2
            ",
      "startCol": 32,
      "startLine": 26,
      "startOffset": 910,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 19,
      "endLine": 28,
      "endOffset": 949,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "div",
      "raw": "</div>",
      "startCol": 13,
      "startLine": 28,
      "startOffset": 943,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    Object {
      "endCol": 13,
      "endLine": 29,
      "endOffset": 962,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 19,
      "startLine": 28,
      "startOffset": 949,
      "type": "text",
    },
    Object {
      "attributes": Array [
        Object {
          "endCol": 42,
          "endLine": 29,
          "endOffset": 992,
          "endQuote": Object {
            "endCol": 42,
            "endLine": 29,
            "endOffset": 992,
            "raw": "\\"",
            "startCol": 41,
            "startLine": 29,
            "startOffset": 991,
          },
          "equal": Object {
            "endCol": 30,
            "endLine": 29,
            "endOffset": 980,
            "raw": "=",
            "startCol": 29,
            "startLine": 29,
            "startOffset": 979,
          },
          "isDuplicatable": false,
          "name": Object {
            "endCol": 29,
            "endLine": 29,
            "endOffset": 979,
            "raw": "@triggerName",
            "startCol": 17,
            "startLine": 29,
            "startOffset": 967,
          },
          "potentialName": "triggerName",
          "raw": "@triggerName=\\"expression\\"",
          "spacesAfterEqual": Object {
            "endCol": 30,
            "endLine": 29,
            "endOffset": 980,
            "raw": "",
            "startCol": 30,
            "startLine": 29,
            "startOffset": 980,
          },
          "spacesBeforeEqual": Object {
            "endCol": 29,
            "endLine": 29,
            "endOffset": 979,
            "raw": "",
            "startCol": 29,
            "startLine": 29,
            "startOffset": 979,
          },
          "spacesBeforeName": Object {
            "endCol": 17,
            "endLine": 29,
            "endOffset": 967,
            "raw": "",
            "startCol": 17,
            "startLine": 29,
            "startOffset": 967,
          },
          "startCol": 17,
          "startLine": 29,
          "startOffset": 967,
          "startQuote": Object {
            "endCol": 31,
            "endLine": 29,
            "endOffset": 981,
            "raw": "\\"",
            "startCol": 30,
            "startLine": 29,
            "startOffset": 980,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 41,
            "endLine": 29,
            "endOffset": 991,
            "raw": "expression",
            "startCol": 31,
            "startLine": 29,
            "startOffset": 981,
          },
        },
      ],
      "endCol": 44,
      "endLine": 29,
      "endOffset": 993,
      "endSpace": Object {
        "endCol": 43,
        "endLine": 29,
        "endOffset": 992,
        "raw": "",
        "startCol": 43,
        "startLine": 29,
        "startOffset": 992,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "div",
      "raw": "<div @triggerName=\\"expression\\">",
      "selfClosingSolidus": Object {
        "endCol": 43,
        "endLine": 29,
        "endOffset": 992,
        "raw": "",
        "startCol": 43,
        "startLine": 29,
        "startOffset": 992,
      },
      "startCol": 13,
      "startLine": 29,
      "startOffset": 962,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "attributes": Array [],
      "endCol": 50,
      "endLine": 29,
      "endOffset": 999,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "div",
      "raw": "</div>",
      "startCol": 44,
      "startLine": 29,
      "startOffset": 993,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    Object {
      "endCol": 13,
      "endLine": 30,
      "endOffset": 1012,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 50,
      "startLine": 29,
      "startOffset": 999,
      "type": "text",
    },
    Object {
      "attributes": Array [
        Object {
          "endCol": 46,
          "endLine": 30,
          "endOffset": 1046,
          "endQuote": Object {
            "endCol": 46,
            "endLine": 30,
            "endOffset": 1046,
            "raw": "\\"",
            "startCol": 45,
            "startLine": 30,
            "startOffset": 1045,
          },
          "equal": Object {
            "endCol": 32,
            "endLine": 30,
            "endOffset": 1032,
            "raw": "=",
            "startCol": 31,
            "startLine": 30,
            "startOffset": 1031,
          },
          "isDuplicatable": false,
          "isDynamicValue": true,
          "name": Object {
            "endCol": 31,
            "endLine": 30,
            "endOffset": 1031,
            "raw": "[@triggerName]",
            "startCol": 17,
            "startLine": 30,
            "startOffset": 1017,
          },
          "potentialName": "triggerName",
          "raw": "[@triggerName]=\\"'expression'\\"",
          "spacesAfterEqual": Object {
            "endCol": 32,
            "endLine": 30,
            "endOffset": 1032,
            "raw": "",
            "startCol": 32,
            "startLine": 30,
            "startOffset": 1032,
          },
          "spacesBeforeEqual": Object {
            "endCol": 31,
            "endLine": 30,
            "endOffset": 1031,
            "raw": "",
            "startCol": 31,
            "startLine": 30,
            "startOffset": 1031,
          },
          "spacesBeforeName": Object {
            "endCol": 17,
            "endLine": 30,
            "endOffset": 1017,
            "raw": "",
            "startCol": 17,
            "startLine": 30,
            "startOffset": 1017,
          },
          "startCol": 17,
          "startLine": 30,
          "startOffset": 1017,
          "startQuote": Object {
            "endCol": 33,
            "endLine": 30,
            "endOffset": 1033,
            "raw": "\\"",
            "startCol": 32,
            "startLine": 30,
            "startOffset": 1032,
          },
          "type": "html-attr",
          "value": Object {
            "endCol": 45,
            "endLine": 30,
            "endOffset": 1045,
            "raw": "'expression'",
            "startCol": 33,
            "startLine": 30,
            "startOffset": 1033,
          },
        },
      ],
      "endCol": 48,
      "endLine": 30,
      "endOffset": 1047,
      "endSpace": Object {
        "endCol": 47,
        "endLine": 30,
        "endOffset": 1046,
        "raw": "",
        "startCol": 47,
        "startLine": 30,
        "startOffset": 1046,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "div",
      "raw": "<div [@triggerName]=\\"'expression'\\">",
      "selfClosingSolidus": Object {
        "endCol": 47,
        "endLine": 30,
        "endOffset": 1046,
        "raw": "",
        "startCol": 47,
        "startLine": 30,
        "startOffset": 1046,
      },
      "startCol": 13,
      "startLine": 30,
      "startOffset": 1012,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "attributes": Array [],
      "endCol": 54,
      "endLine": 30,
      "endOffset": 1053,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "div",
      "raw": "</div>",
      "startCol": 48,
      "startLine": 30,
      "startOffset": 1047,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    Object {
      "endCol": 11,
      "endLine": 31,
      "endOffset": 1064,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
          ",
      "startCol": 54,
      "startLine": 30,
      "startOffset": 1053,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 18,
      "endLine": 31,
      "endOffset": 1071,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "body",
      "raw": "</body>",
      "startCol": 11,
      "startLine": 31,
      "startOffset": 1064,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    Object {
      "endCol": 9,
      "endLine": 32,
      "endOffset": 1080,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
        ",
      "startCol": 18,
      "startLine": 31,
      "startOffset": 1071,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 16,
      "endLine": 32,
      "endOffset": 1087,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "html",
      "raw": "</html>",
      "startCol": 9,
      "startLine": 32,
      "startOffset": 1080,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    Object {
      "endCol": 7,
      "endLine": 33,
      "endOffset": 1094,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
      ",
      "startCol": 16,
      "startLine": 32,
      "startOffset": 1087,
      "type": "text",
    },
  ],
}
`;

exports[`parser tag namespace 1`] = `
Object {
  "isFragment": true,
  "nodeList": Array [
    Object {
      "endCol": 7,
      "endLine": 2,
      "endOffset": 7,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
      ",
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 17,
      "endLine": 2,
      "endOffset": 17,
      "endSpace": Object {
        "endCol": 16,
        "endLine": 2,
        "endOffset": 16,
        "raw": "",
        "startCol": 16,
        "startLine": 2,
        "startOffset": 16,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/2000/svg",
      "nodeName": "svg:defs",
      "raw": "<svg:defs>",
      "selfClosingSolidus": Object {
        "endCol": 16,
        "endLine": 2,
        "endOffset": 16,
        "raw": "",
        "startCol": 16,
        "startLine": 2,
        "startOffset": 16,
      },
      "startCol": 7,
      "startLine": 2,
      "startOffset": 7,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "endCol": 9,
      "endLine": 3,
      "endOffset": 26,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
        ",
      "startCol": 17,
      "startLine": 2,
      "startOffset": 17,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 29,
      "endLine": 3,
      "endOffset": 46,
      "endSpace": Object {
        "endCol": 28,
        "endLine": 3,
        "endOffset": 45,
        "raw": "",
        "startCol": 28,
        "startLine": 3,
        "startOffset": 45,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/2000/svg",
      "nodeName": "svg:linearGradient",
      "raw": "<svg:linearGradient>",
      "selfClosingSolidus": Object {
        "endCol": 28,
        "endLine": 3,
        "endOffset": 45,
        "raw": "",
        "startCol": 28,
        "startLine": 3,
        "startOffset": 45,
      },
      "startCol": 9,
      "startLine": 3,
      "startOffset": 26,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    Object {
      "attributes": Array [],
      "endCol": 50,
      "endLine": 3,
      "endOffset": 67,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/2000/svg",
      "nodeName": "svg:linearGradient",
      "raw": "</svg:linearGradient>",
      "startCol": 29,
      "startLine": 3,
      "startOffset": 46,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    Object {
      "endCol": 7,
      "endLine": 4,
      "endOffset": 74,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
      ",
      "startCol": 50,
      "startLine": 3,
      "startOffset": 67,
      "type": "text",
    },
    Object {
      "attributes": Array [],
      "endCol": 18,
      "endLine": 4,
      "endOffset": 85,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/2000/svg",
      "nodeName": "svg:defs",
      "raw": "</svg:defs>",
      "startCol": 7,
      "startLine": 4,
      "startOffset": 74,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    Object {
      "endCol": 5,
      "endLine": 5,
      "endOffset": 90,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
    ",
      "startCol": 18,
      "startLine": 4,
      "startOffset": 85,
      "type": "text",
    },
  ],
}
`;

exports[`parser tag namespace 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -31,11 +31,11 @@
        },
        \\"hasSpreadAttr\\": false,
        \\"isCustomElement\\": false,
        \\"isFragment\\": false,
        \\"isGhost\\": false,
-       \\"namespace\\": \\"http://www.w3.org/1999/xhtml\\",
+       \\"namespace\\": \\"http://www.w3.org/2000/svg\\",
        \\"nodeName\\": \\"svg:defs\\",
        \\"raw\\": \\"<svg:defs>\\",
        \\"selfClosingSolidus\\": Object {
          \\"endCol\\": 16,
          \\"endLine\\": 2,
@@ -82,11 +82,11 @@
        },
        \\"hasSpreadAttr\\": false,
        \\"isCustomElement\\": false,
        \\"isFragment\\": false,
        \\"isGhost\\": false,
-       \\"namespace\\": \\"http://www.w3.org/1999/xhtml\\",
+       \\"namespace\\": \\"http://www.w3.org/2000/svg\\",
        \\"nodeName\\": \\"svg:linearGradient\\",
        \\"raw\\": \\"<svg:linearGradient>\\",
        \\"selfClosingSolidus\\": Object {
          \\"endCol\\": 28,
          \\"endLine\\": 3,
@@ -109,11 +109,11 @@
        \\"endLine\\": 3,
        \\"endOffset\\": 67,
        \\"isCustomElement\\": false,
        \\"isFragment\\": false,
        \\"isGhost\\": false,
-       \\"namespace\\": \\"http://www.w3.org/1999/xhtml\\",
+       \\"namespace\\": \\"http://www.w3.org/2000/svg\\",
        \\"nodeName\\": \\"svg:linearGradient\\",
        \\"raw\\": \\"</svg:linearGradient>\\",
        \\"startCol\\": 29,
        \\"startLine\\": 3,
        \\"startOffset\\": 46,
@@ -141,11 +141,11 @@
        \\"endLine\\": 4,
        \\"endOffset\\": 85,
        \\"isCustomElement\\": false,
        \\"isFragment\\": false,
        \\"isGhost\\": false,
-       \\"namespace\\": \\"http://www.w3.org/1999/xhtml\\",
+       \\"namespace\\": \\"http://www.w3.org/2000/svg\\",
        \\"nodeName\\": \\"svg:defs\\",
        \\"raw\\": \\"</svg:defs>\\",
        \\"startCol\\": 7,
        \\"startLine\\": 4,
        \\"startOffset\\": 74,"
`;

exports[`parser void element 1`] = `
Object {
  "isFragment": true,
  "nodeList": Array [
    Object {
      "attributes": Array [],
      "endCol": 6,
      "endLine": 1,
      "endOffset": 5,
      "endSpace": Object {
        "endCol": 5,
        "endLine": 1,
        "endOffset": 4,
        "raw": "",
        "startCol": 5,
        "startLine": 1,
        "startOffset": 4,
      },
      "hasSpreadAttr": false,
      "isCustomElement": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "img",
      "raw": "<img>",
      "selfClosingSolidus": Object {
        "endCol": 5,
        "endLine": 1,
        "endOffset": 4,
        "raw": "",
        "startCol": 5,
        "startLine": 1,
        "startOffset": 4,
      },
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
  ],
}
`;

exports[`parser void element 2`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;
